pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingFunctionTypeNParameterListDelimiter.pkl
f: (String, Int, String -> String
res1 = 42
